--- a/src/client/styles/_components.scss
+++ b/src/client/styles/_components.scss
@@ -1,3 +1,10 @@
 @import 'components/navbar';
 @import 'components/header';
+@import 'components/footer';
+@import 'components/highlight';
+@import 'components/main';
+@import 'components/region';
+@import 'components/section';
+@import 'components/feature';
+@import 'components/getting-started';
 
