--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -1,19 +1,20 @@
 @import url('~normalize.css');
 @import 'variables';
-@import 'fonts';
 @import 'mixins';
+@import 'animations';
 
 html {
   @include open-sans();
-  background-color: $color__green;
+  background-color: $color__white;
   font-size: $font__size;
+  @include tablet-landscape-up {
+    font-size: 1.1em;
+  }
   line-height: 1.5;
   ul, li {
     list-style-type: none;
   }
-  a {
-    text-decoration: none;
-  }
+  @include link-on-light;
 }
 .App {
   // Load components
