chore: use prettier on all supported files

--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -8,18 +8,18 @@ $font__size: 14px;
 // ------
 
 // Palette - not used directly
-$color__sea-serpent: #59C3C3;
-$color__dark-cerulean: #124E78;
-$color__pale-turquoise: #ADEEE3;
-$color__light-cobalt-blue: #94B0DA;
-$color__azureish-white: #DCEDFF;
+$color__sea-serpent: #59c3c3;
+$color__dark-cerulean: #124e78;
+$color__pale-turquoise: #adeee3;
+$color__light-cobalt-blue: #94b0da;
+$color__azureish-white: #dcedff;
 
 // Generic colors
-$color__white: #EFEFEF;
-$color__grey--light: #E2E2E2;
-$color__grey: #8D8D8D;
+$color__white: #efefef;
+$color__grey--light: #e2e2e2;
+$color__grey: #8d8d8d;
 $color__grey--dark: #333333;
-$color__black: #0F0F0F;
+$color__black: #0f0f0f;
 $color__blue: #3b5995;
 $color__pink: #aa347c;
 $color__red: #aa323e;
