--- a/src/client/styles/_animations.scss
+++ b/src/client/styles/_animations.scss
@@ -2,16 +2,21 @@
 // Shake animation
 // ----------
 @keyframes animation-shake {
-  10%, 90% {
+  10%,
+  90% {
     transform: translate3d(-1px, 1px, 0);
   }
-  20%, 80% {
+  20%,
+  80% {
     transform: translate3d(1px, -1px, 0);
   }
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate3d(-1px, -1px, 0);
   }
-  30%, 70% {
+  30%,
+  70% {
     transform: translate3d(1px, 1px, 0);
   }
 }
