--- a/src/client/styles/components/_highlight.scss
+++ b/src/client/styles/components/_highlight.scss
@@ -1,7 +1,6 @@
 @import '../variables';
 
 .highlight {
-
   /**
    * Local variables
    */
@@ -24,5 +23,6 @@
       content: '$ ';
     }
   }
-  &--path {}
+  &--path {
+  }
 }
