--- a/src/client/styles/mixins/fonts/_open-sans.scss
+++ b/src/client/styles/mixins/fonts/_open-sans.scss
@@ -5,7 +5,7 @@
 
   // Check for valid values
   @if index($weights, $weight) and index($styles, $style) {
-    font-family: "Open Sans", $fallback;
+    font-family: 'Open Sans', $fallback;
     font-display: swap;
     font-weight: $weight;
     font-style: $style;
@@ -20,8 +20,9 @@
   font-style: normal;
   font-weight: 300;
   src: local('Open Sans Light'), local('OpenSans-Light'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-300italic - latin-ext_latin */
 @font-face {
@@ -30,8 +31,9 @@
   font-style: italic;
   font-weight: 300;
   src: local('Open Sans Light Italic'), local('OpenSans-LightItalic'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300italic.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-300italic.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-regular - latin-ext_latin */
 @font-face {
@@ -40,8 +42,9 @@
   font-style: normal;
   font-weight: 400;
   src: local('Open Sans Regular'), local('OpenSans-Regular'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-regular.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-regular.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-italic - latin-ext_latin */
 @font-face {
@@ -50,8 +53,9 @@
   font-style: italic;
   font-weight: 400;
   src: local('Open Sans Italic'), local('OpenSans-Italic'),
-  url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-italic.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-italic.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-600 - latin-ext_latin */
 @font-face {
@@ -60,8 +64,9 @@
   font-style: normal;
   font-weight: 600;
   src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-600italic - latin-ext_latin */
 @font-face {
@@ -70,8 +75,9 @@
   font-style: italic;
   font-weight: 600;
   src: local('Open Sans SemiBold Italic'), local('OpenSans-SemiBoldItalic'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600italic.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-600italic.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-700 - latin-ext_latin */
 @font-face {
@@ -80,8 +86,9 @@
   font-style: normal;
   font-weight: 700;
   src: local('Open Sans Bold'), local('OpenSans-Bold'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-700italic - latin-ext_latin */
 @font-face {
@@ -90,8 +97,9 @@
   font-style: italic;
   font-weight: 700;
   src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700italic.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-700italic.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-800 - latin-ext_latin */
 @font-face {
@@ -100,8 +108,9 @@
   font-style: normal;
   font-weight: 800;
   src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800.woff')
+      format('woff'); /* Modern Browsers */
 }
 /* open-sans-800italic - latin-ext_latin */
 @font-face {
@@ -110,6 +119,7 @@
   font-style: italic;
   font-weight: 800;
   src: local('Open Sans ExtraBold Italic'), local('OpenSans-ExtraBoldItalic'),
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800italic.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800italic.woff') format('woff'); /* Modern Browsers */
+    url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../../../../assets/fonts/open-sans/open-sans-v15-latin-ext_latin-800italic.woff')
+      format('woff'); /* Modern Browsers */
 }
