refactor: misc refactor

--- a/src/client/styles/_components.scss
+++ b/src/client/styles/_components.scss
@@ -1,9 +1,12 @@
 @import 'components/navbar';
 @import 'components/header';
+@import 'components/section';
+@import 'components/grid';
+@import 'components/illustration';
 @import 'components/footer';
 @import 'components/highlight';
 @import 'components/main';
 @import 'components/region';
-@import 'components/section';
 @import 'components/feature';
-@import 'components/getting-started';
+@import 'components/success';
+@import 'components/emoji';
