--- a/src/client/styles/components/_feature.scss
+++ b/src/client/styles/components/_feature.scss
@@ -9,19 +9,12 @@
 
   display: flex;
   justify-self: center;
-  align-self: start;
+  align-self: flex-start;
   flex-direction: column;
   align-items: center;
   text-align: center;
   font-size: 0.9em;
   max-width: 24em;
-
-  // Animate focus
-  transform: scale(0.9) translateX(1em) translateY(-1em);
-  transition: transform 1s ease-out;
-  &.is-focused {
-    transform: scale(1) translateX(0em) translateY(0em);
-  }
 
   // Icon
   .feature__icon {
@@ -41,7 +34,7 @@
   // Subtitle
   .feature__subtitle {
     @include open-sans(300);
-    font-size: 0.7em;
+    font-size: 0.8em;
     text-transform: uppercase;
     letter-spacing: 2px;
   }
