--- a/src/client/components/Navbar/Navbar.module.scss
+++ b/src/client/components/Navbar/Navbar.module.scss
@@ -2,54 +2,147 @@
 @import '../../styles/mixins/media/media';
 
 // Local variables
-$local--color-primary: var(--theme-color-primary);
-$local--color-primary--contrast: var(--theme-color-primary--contrast);
-$local--color-black: var(--color-black--100);
-$local--animation-duration: 200ms;
+$local--color-text: var(--theme-color-primary);
+$local--color-background: var(--theme-color-primary--contrast);
 $local--height: var(--navbar-height);
-$local--padding: $local--height / 8;
+$local--animation-duration: 200ms;
+$local--color-black: #000;
+$local--padding: 1em;
+$local--hamburger--line-height: 4px;
+
+// Local mixins
+@mixin local--large-screen {
+  @include tablet-landscape-up {
+    @content;
+  }
+}
 
 .navbar {
-  background-color: $local--color-primary--contrast;
+  background-color: transparent;
   transition: ease-out background-color $local--animation-duration;
-  z-index: 10;
   width: 100%;
+  height: $local--height;
   position: fixed;
-  @include tablet-landscape-up {
-    background-color: transparent;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: $local--padding;
+  z-index: 10;
 }
 .navbarSticky {
-  @include tablet-landscape-up {
-    background-color: $local--color-primary--contrast;
-    box-shadow: 0 0 0.2em $local--color-black;
-  }
+  background-color: $local--color-background;
+  box-shadow: 0 0 0.2em $local--color-black;
 }
-
 .navbarLogo {
-  height: $local--height - $local--padding;
-  display: block;
-  float: left;
-  margin: $local--padding / 2;
-  padding: 0;
+  height: $local--height;
+  width: calc(#{$local--height} * (64 / 44));
   background: url('../../../assets/vector/logo.svg') no-repeat center center;
   background-size: contain;
+  display: flex;
+  z-index: 10;
 }
 .navbarLogoText {
-  visibility: hidden;
+  font-size: 0;
 }
 .navbarHamburger {
-}
-.navbarHamburgerExpanded {
+  position: fixed;
+  z-index: 10;
+  right: $local--padding;
+  height: $local--height;
+  width: $local--height;
+  padding: $local--padding / 2;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: stretch;
+  background: none;
+  border: none;
+  cursor: pointer;
+  @include local--large-screen {
+    display: none;
+  }
 }
 .navbarHamburgerLine {
+  height: $local--hamburger--line-height;
+  border-radius: $local--hamburger--line-height;
+  background-color: $local--color-text;
+  transition: background-color $local--animation-duration ease-in-out;
+  display: block;
+
+  // Animate opening and closing
+  &:first-child,
+  &:last-child {
+    transform: rotate(0deg) translateY(0) translateX(0);
+    transition: transform $local--animation-duration ease-in-out;
+  }
+  &:not(:first-child):not(:last-child) {
+    transform: rotateY(0deg);
+    transition: transform $local--animation-duration ease-in-out;
+  }
 }
 .navbarHamburgerLineExpanded {
+  $local--hamburger-line-rotation-offset: calc((#{$local--height} - #{$local--padding}) * 1 / 3);
+  &:first-child {
+    transform: translate3d(0, $local--hamburger-line-rotation-offset, 0) rotate(45deg);
+  }
+  &:not(:first-child):not(:last-child) {
+    transform: rotateY(90deg);
+  }
+  &:last-child {
+    transform: translate3d(0, calc(#{$local--hamburger-line-rotation-offset} * -1), 0)
+      rotate(-45deg);
+  }
+}
+.navbarListContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  margin: 0 0 0 100vw;
+  overflow: hidden;
+  padding: calc(#{$local--height} * 2) 0 0 0;
+  background-color: $local--color-background;
+  transform: translateX(0);
+  transition: transform $local--animation-duration ease-in-out;
+  @include local--large-screen {
+    position: relative;
+    padding: 0;
+    margin: 0 0 0 $local--padding;
+    background-color: initial;
+    height: initial;
+    width: initial;
+  }
+}
+.navbarListContainerExpanded {
+  transform: translateX(-100%);
+  @include local--large-screen {
+    transform: none;
+  }
 }
 .navbarList {
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  @include local--large-screen {
+    display: flex;
+    flex: 1;
+  }
 }
 .navbarListExpanded {
 }
 .navbarListItem {
+  font-size: 2em;
+  letter-spacing: 0.1em;
+  @include local--large-screen {
+    display: inline-block;
+    font-size: initial;
+    padding: 0 $local--padding;
+    letter-spacing: initial;
+  }
+}
+.navbarListItemMobile {
+  @include local--large-screen {
+    display: none;
+  }
 }
