--- a/src/client/components/Header/Header.module.scss
+++ b/src/client/components/Header/Header.module.scss
@@ -12,27 +12,28 @@ $local--color-black: #101010;
   overflow: hidden;
   color: $local--color-white;
   text-shadow: 0 0 0.2em $local--color-black;
-  padding: calc(#{$local--navbar-height} * 4) 0 calc(#{$local--navbar-height} * 3) 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.headerMain {
   @include responsive-background(
     '../../../../assets/images/florian-olivo-1169465-unsplash.png',
-    'linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 20%, rgba(0, 0, 0, 0.3) 100%),',
+    'linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.3) 100%),',
     'no-repeat center center / cover'
   );
 }
 .headerHero {
+  flex-basis: calc(#{$local--navbar-height} * 8);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  align-self: stretch;
 }
 .headerTitle {
   font-size: 4em;
   line-height: 1;
   margin: 0;
+  text-align: center;
 }
 .headerSubtitle {
   @include open-sans(300);
@@ -40,6 +41,7 @@ $local--color-black: #101010;
   font-size: 0.7em;
   text-transform: uppercase;
   letter-spacing: 0.3em;
+  text-align: center;
 }
 .headerDescription {
   margin-top: 2em;
