--- a/src/client/components/Link/Link.module.scss
+++ b/src/client/components/Link/Link.module.scss
@@ -1,6 +1,3 @@
-// Local variables
-$local--color-primary: var(--theme-color-primary);
-
 .link {
-  color: $local--color-primary;
+  color: var(--color-link);
 }
