--- a/src/client/components/Terminal/Terminal.module.scss
+++ b/src/client/components/Terminal/Terminal.module.scss
@@ -1,4 +1,6 @@
+// ----------------
 // Local variables
+// ----------------
 $local--top-bar-height: 30px;
 $local--background-color: #1d1d1d;
 
@@ -39,7 +41,6 @@ $local--background-color: #1d1d1d;
 .terminalImageContainer {
   padding: 12px;
 }
-
 .terminalImage {
   display: block;
   width: 100%;
