--- a/src/client/components/Header/Header.module.scss
+++ b/src/client/components/Header/Header.module.scss
@@ -1,17 +1,20 @@
 @import '../../styles/mixins/fonts/open-sans';
 @import '../../styles/mixins/media/media';
-
-// Local variables
-$local--navbar-height: var(--navbar-height);
-$local--color-text: var(--theme-color-primary);
-$local--color-white: #efefef;
-$local--color-black: #101010;
+@import '../../styles/colors';
 
 .header {
+  // ----------
+  // Overrides
+  // ----------
+  --color-text: #{$color-white--100};
+
+  // ------
+  // Style
+  // ------
   font-size: 1.1em;
   overflow: hidden;
-  color: $local--color-white;
-  text-shadow: 0 0 0.2em $local--color-black;
+  color: var(--color-text);
+  text-shadow: 0 0 0.2em $color-black--100;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +25,7 @@ $local--color-black: #101010;
   );
 }
 .headerHero {
-  flex-basis: calc(#{$local--navbar-height} * 8);
+  flex-basis: calc(var(--navbar-height) * 8);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,8 +39,12 @@ $local--color-black: #101010;
   text-align: center;
 }
 .headerSubtitle {
+  // Overrides
+  --color-text: #{$color-turquoise};
+
+  // Style
   @include open-sans(300);
-  color: $local--color-text;
+  color: var(--color-text);
   font-size: 0.7em;
   text-transform: uppercase;
   letter-spacing: 0.3em;
