--- a/src/client/components/Navbar/NavLink/NavLink.module.scss
+++ b/src/client/components/Navbar/NavLink/NavLink.module.scss
@@ -1,14 +1,17 @@
 @import '../../../styles/mixins/fonts/open-sans';
 @import '../../../styles/mixins/media/media';
 
+// ----------------
 // Local variables
-$local--color: var(--theme-color-primary);
-$local--navbar-height: var(--navbar-height);
+// ----------------
 $local--animation-duration: 200ms;
 $local--padding: 0.5em;
 
+// -------------
+// Local mixins
+// -------------
 @mixin local--active-state {
-  background: $local--color;
+  background: var(--color-link);
   @include tablet-landscape-up {
     left: 0;
     right: 0;
@@ -19,8 +22,8 @@ $local--padding: 0.5em;
   @include open-sans(600);
   display: inline-block;
   padding: $local--padding;
-  color: $local--color;
-  font-size: calc(#{$local--navbar-height} / 3);
+  color: var(--color-text);
+  font-size: calc(var(--navbar-height) / 3);
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 5px;
@@ -45,6 +48,7 @@ $local--padding: 0.5em;
     mask-repeat: no-repeat;
     mask-position: center;
 
+    // Responsiveness
     @include tablet-landscape-up {
       width: initial;
       position: absolute;
@@ -54,7 +58,6 @@ $local--padding: 0.5em;
       height: 0.2em;
       border-radius: 0.2em;
       mask: none;
-      background: $local--color;
       transition-property: left, right;
     }
   }
@@ -66,6 +69,10 @@ $local--padding: 0.5em;
   }
 }
 .navLinkExternal {
+  // Override
+  --color-background: var(--color-text);
+
+  // Style
   &::after {
     content: '';
     vertical-align: top;
@@ -73,7 +80,7 @@ $local--padding: 0.5em;
     width: 1.1em;
     margin-left: 0.2em;
     display: inline-block;
-    background-color: $local--color;
+    background-color: var(--color-background);
     mask-image: url('../../../../assets/vector/icons/Icon-Link-External.svg');
     mask-size: 80%;
     mask-repeat: no-repeat;
