--- a/src/client/styles/mixins/media/_media.scss
+++ b/src/client/styles/mixins/media/_media.scss
@@ -1,7 +1,7 @@
 @import '../../settings';
 
 // ------------------
-// Screensize mixins
+// Screen size mixins
 // ------------------
 @mixin phone-only {
   @media (max-width: unquote($breakpoint-phone-down + 'px')) {
@@ -36,16 +36,16 @@
 // Use differently sized images depending on breakpoint
 @mixin responsive-background($url, $prepend: '', $append: '') {
   @include phone-only {
-    background: #{$prepend} url('#{$url}?size='+$breakpoint-tablet-portrait-up) #{$append};
+    background: #{$prepend} url('#{$url}?size='+($breakpoint-tablet-portrait-up)) #{$append};
   }
   @include tablet-portrait-up {
-    background: #{$prepend} url('#{$url}?size='+$breakpoint-tablet-landscape-up) #{$append};
+    background: #{$prepend} url('#{$url}?size='+($breakpoint-tablet-landscape-up)) #{$append};
   }
   @include tablet-landscape-up {
-    background: #{$prepend} url('#{$url}?size='+$breakpoint-desktop-up) #{$append};
+    background: #{$prepend} url('#{$url}?size='+($breakpoint-desktop-up)) #{$append};
   }
   @include desktop-up {
-    background: #{$prepend} url('#{$url}?size='+$breakpoint-large-desktop-up) #{$append};
+    background: #{$prepend} url('#{$url}?size='+($breakpoint-large-desktop-up)) #{$append};
   }
   @include large-desktop-up {
     background: #{$prepend} url('#{$url}?size='+(2*$breakpoint-large-desktop-up)) #{$append};
